--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1 class="nav-title" >J3R5</h1>
                 <a href="">Projet</a>
                 <a href="">A propos</a>
-                <a href="html/logiciel&code.html">Logiciel & Code</a>
+                <a href="">Logiciel & Code</a>
                 <a href="">Cursus</a>
                 <a href="">Contact</a>
             </nav>
