--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body class="background">
 
     <header class="bandeau">
+        <div class="Bord_1"></div>
+        <h1 class="nav-title" >J3R5</h1>
             <nav class="nav-BP">
-                <h1 class="nav-title" >J3R5</h1>
                 <a href="">Projet</a>
                 <a href="">A propos</a>
                 <a href="">Logiciel & Code</a>
                 <a href="">Cursus</a>
                 <a href="">Contact</a>
             </nav>
+        <img src="img/logo_vec.png" alt="Logo" class="nav-logo">
+        <div class="Bord_2"></div>
     </header>
 
     <div align="center">
