--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="Bord_1"></div>
         <h1 class="nav-title" >J3R5</h1>
             <nav class="nav-BP">
-                <a href="">Projet</a>
-                <a href="">A propos</a>
-                <a href="">Logiciel & Code</a>
-                <a href="">Cursus</a>
-                <a href="">Contact</a>
+                <a href="#">Projet</a>
+                <a href="#">A propos</a>
+                <a href="#">Logiciel & Code</a>
+                <a href="#">Cursus</a>
+                <a href="#">Contact</a>
             </nav>
         <img src="img/logo_vec.png" alt="Logo" class="nav-logo">
         <div class="Bord_2"></div>
