--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Jérémy Clémente - Portefolio</title>
 </head>
 
-<body class="background">
+<body class="background-acceuil">
 
     <header class="bandeau">
         <div class="Bord_1"></div>
