--- a/html/logiciel&code.html
+++ b/html/logiciel&code.html
@@ -46,25 +46,25 @@
                     <div class="electronique-texte">
 
                         <p>    
-                                Mon intéret pour l'électronique à commencer comme une simple curiosité puis 
-                            c'est devenue une passion. Ajourd'hui je réalise des circuits électronique et cartes électronique
-                            via deux logiciel <strong> Kicad et Proteus.</strong> Je réalise d'abord un schéma puis le test sur plaquette d'essaie.
-                            Une fois le test concluant je passe au routage de la carte ensuite j'imprime la carte sois à l'université, sur JLC-PCB
-                            ou encore à la maison via une graveuse 
+                                Mon intérêt pour l'électronique à commencer comme une simple curiosité, puis 
+                            c'est devenu une passion. Aujourd'hui, je réalise des circuits électroniques et cartes électroniques
+                            via deux logiciels <strong> Kicad et Proteus.</strong> Je réalise d'abord un schéma, puis le test sur plaquette d'essai.
+                            Une fois le test concluant, je passe au routage de la carte et ensuite j'imprime la carte soit à l'université, sur JLC-PCB
+                            ou encore à la maison via une graveuse. 
                         </p>
 
                         <p>     
-                                J'apprend l'électronique de diverse façon. Principalement à l'université ou j'y est acquis les bases
-                            comme le dimensionnement et le fonctionnement des composants de base. J'aquis aussi des connaissances par 
-                            autodidacte en regarder des tutoriels ou les datasheets. Cela ma permis de connaitre un certain nombre de 
-                            circuit intégréer et leur fonctionnement. 
+                                J'apprend l'électronique de diverses façons. Principalement à l'université où j'y ai acquis les bases
+                            comme le dimensionnement et le fonctionnement des composants de base. J'acquis aussi des connaissances par 
+                            autodidacte en regardant des tutoriels ou les datasheets. Cela ma permis de connaitre un certain nombre de 
+                            circuits intégrés et leur fonctionnement. 
 
                         </p>
 
                         <p>
                                 Je partage mes connaissances en électronique en publiant des projets sur mon <a target="_blank" href="https://github.com/J3R5">Github</a>
-                            qui regroupent aussi d'autre connaissances. Un esemple de projet intégrant de l'électronique est mon projet 
-                            <a href="https://github.com/J3R5/Arduino_decodeur">Décodeur 74HC238</a> qui explique le fonctionnement du circuit intégrer et donnant un PCB ainsi qu'une 
+                            qui regroupent aussi d'autres connaissances. Un exemple de projet intégrant de l'électronique est celui sur 
+                            <a target="_blank" href="https://github.com/J3R5/Arduino_decodeur">Décodeur 74HC238</a> qui explique le fonctionnement du circuit intégré et donnant un PCB ainsi qu'une 
                             bibliothèque arduino.
                         </p>
 
@@ -88,22 +88,22 @@
                         
 
                         <p>    
-                                Au début de l'université j'avais des cours d'informatique c'est d'ailleur ici que j'ai appris mes premiers language de programmation le
-                            <strong>C# sur Visual Studio</strong> pendant le semestre j'ai appris a faire des programme console permettant de faire divers chose comme traiter
+                                Au début de l'université, j'avais des cours d'informatique, c'est d'ailleurs ici que j'ai appris mes premiers languages de programmation le
+                            <strong>C# sur Visual Studio</strong> pendant le semestre, j'ai appris à faire des programmes consoles permettant de faire diverses choses comme traiter
                             des données ou faire des demandes utilisateurs.  
                         </p>
 
                         <p>    
-                                Le C# m'as plus et j'ai decidé d'appronfondir mes connaissances en apprennant les form qui permette de créer de petite application
+                                Le C# m'as plu et j'ai décidé d'appronfondir mes connaissances en apprenant les forms qui permettent de créer de petites applications
                             toujours sous visual studio. J'ai aussi commencé à apprendre les langages web plus précisement l'HTML et le CSS. Cela me permet de concevoir des
-                            site internet comme celui ci. Je compte après apprendre le Javascript ainsi que le Rubis.
+                            sites internets comme celui ci. Je compte après apprendre le Javascript ainsi que le Rubis.
 
                         </p>
 
                         <p>
-                            Tous comme l'électronique partage mes projets sur Github l'un des projets en lien avec l'informatique est la création d'une application C# 
-                            form pour aider a coder des matrices de leds 16x16 avec la bibliothèque FastLed. <a target="_blank" href="https://github.com/J3R5/Arduino_application_Matrice_led_16x16">Projet C#</a> Sinon la création de se site web 
-                            est aussi l'un de mes projet.   
+                            Tout comme l'électronique, je partage mes projets sur Github, l'un des projets en lien avec l'informatique est la création d'une application C# 
+                            form pour aider à coder des matrices de leds 16x16 avec la bibliothèque FastLed. <a target="_blank" href="https://github.com/J3R5/Arduino_application_Matrice_led_16x16">Projet C#</a> Sinon la création de se site web 
+                            est aussi l'un de mes projets.   
                         </p>
 
                     </div>
@@ -114,7 +114,7 @@
             <article class="info-emb">
                 <div class="info-emb-t">
                     <img class="info-emb-1" src="../img/pcb-micro.png" alt="Circuit">
-                    <h2 class="info-emb-title">Informatique embarqué</h2>
+                    <h2 class="info-emb-title">Informatique embarquée</h2>
                     <img class="info-emb-2" src="../img/processor.png" alt="CPU">           
                 </div>
 
@@ -122,22 +122,22 @@
                     <div class="info-emb-texte">
 
                         <p>    
-                                L'informatique embarqué est l'un de mes passion car elle combine de l'informatique et de l'électronique.
-                            J'ai commencé se passe temps avec les cartes arduino en les codant via l'IDE Arduino. Puis j'ai aussi appris à
-                            coder des ESP32 toujours avec l'IDE Arduino. Mes connaissances en électronique me permette de créer des système plus
-                            complexe.    
+                                L'informatique embarquée est l'une de mes passions car elle combine de l'informatique et de l'électronique.
+                            J'ai commencé se passe-temps avec les cartes arduino en les codant via l'IDE Arduino. Puis, j'ai aussi appris à
+                            coder des ESP32 toujours avec l'IDE Arduino. Mes connaissances en électronique me permettent de créer des systèmes plus
+                            complexes.    
                         </p>
 
                         <p>     
-                                A l'université j'ai appris a coder les microcontroleurs Microchip plus précisement les PIC via le logiciel 
-                                MpLab-X et son extension Harmony. J'ai appris a utiliser différent capteur analogique et digital ainsi que des 
-                                sortie digital. 
+                                A l'université, j'ai appris à coder les microcontroleurs Microchip plus précisement les PIC via le logiciel 
+                                MpLab-X et son extension Harmony. J'ai appris à utiliser différents capteurs analogiques et digitals ainsi que des 
+                                sorties digitales. 
                         </p>
 
                         <p>
-                                Tous comme l'informatique et l'électronique je partage mes projets sur Github comme par exemple mon projet sur 
+                                Tout comme l'informatique et l'électronique, je partage mes projets sur Github comme par exemple mon projet sur 
                                 l'utilisation d'un capteur ultrasons <a target="_blank" href="https://github.com/J3R5/Arduino_ultrason_HC_SR04">HC-SR04</a> ou encore 
-                                bien d'autre.
+                                bien d'autres.
                         </p>
 
                     </div>
