--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="nav-BP">
                 <a href="#">Projet</a>
                 <a href="#">A propos</a>
-                <a href="">Logiciel & Code</a>
+                <a href="html/logiciel&code.html">Logiciel & Code</a>
                 <a href="#">Cursus</a>
                 <a href="#">Contact</a>
             </nav>
