--- a/html/logiciel&code.html
+++ b/html/logiciel&code.html
@@ -14,6 +14,8 @@
     <header class="bandeau">
         <div class="Bord_1"></div>
         <h1 class="nav-title" >J3R5</h1>
+        <input type="checkbox" id="check_menu" class="menu-input">
+        <label for="check_menu" class="menu" >&#9776;</label>
             <nav class="nav-BP">
                 <a href="">Projet</a>
                 <a href="">A propos</a>
