--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div>
-            <img name="logo" src="img/chill.gif" width="350" height="200">
+            <img name="logo" src="img/chill.gif">
         </div>
     </div>
 </body>
