--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="descrition" content="Portefolio Jeremy Clemente">
     <meta name="keyword" content="Portefolio,Jeremy Clemente">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="/img/logo_vec.png" />
     <title>Jérémy Clémente - Portefolio</title>
 </head>
 
@@ -17,11 +18,11 @@
         <input type="checkbox" id="check_menu" class="menu-input">
         <label for="check_menu" class="menu" >&#9776;</label>
             <nav class="nav-BP">
-                <a href="#">Projet</a>
-                <a href="#">A propos</a>
+                <a href="">Projet</a>
+                <a href="">A propos</a>
                 <a href="html/logiciel&code.html">Logiciel & Code</a>
-                <a href="#">Cursus</a>
-                <a href="#">Contact</a>
+                <a href="">Cursus</a>
+                <a href="">Contact</a>
             </nav>
         <img src="img/logo_vec.png" alt="Logo" class="nav-logo">
         <div class="Bord_2"></div>
@@ -32,9 +33,9 @@
             <h1 class="portfolio">Portfolio</h1>
         </div> 
 
-        <div class="Logo_prenom">
-            <img src="img/logo_vec.png" width="125" height="140" class="Logo_prenom">
-            <h2 class="Logo_prenom">Jérémy <br> Clémente</h2>
+        <div class="LP">
+            <img src="img/logo_vec.png" class="Logo">
+            <h2 class="prenom">Jérémy <br> Clémente</h2>
         </div>
 
         <div>
@@ -42,7 +43,7 @@
         </div>
 
         <div>
-            <img name="logo" src="img/chill.gif">
+            <img name="logo" src="img/chill.gif" class="chill">
         </div>
     </div>
 </body>
