--- a/html/logiciel&code.html
+++ b/html/logiciel&code.html
@@ -56,9 +56,9 @@
                         </p>
 
                         <p>     
-                                J'apprend l'électronique de diverses façons. Principalement à l'université où j'y ai acquis les bases
+                                J'apprends l'électronique de diverses façons. Principalement à l'université où j'y ai acquis les bases
                             comme le dimensionnement et le fonctionnement des composants de base. J'acquis aussi des connaissances par 
-                            autodidacte en regardant des tutoriels ou les datasheets. Cela ma permis de connaitre un certain nombre de 
+                            autodidacte en regardant des tutoriels ou les datasheets. Cela m'a permis de connaître un certain nombre de 
                             circuits intégrés et leur fonctionnement. 
 
                         </p>
