--- a/html/contact.html
+++ b/html/contact.html
@@ -39,7 +39,7 @@
 
                             <div class="NP">
                                 <h3> Jérémy Clémente </h3>
-                                <img src="https://via.placeholder.com/200x200" alt="photo de Jeremy">
+                                <img src="../img/J3R5.png" alt="photo de Jeremy" class="J3R5">
                             </div>
     
                             <div>
